--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ apa {
   font-size: 17px;
   padding: 8px 20px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #2f6627;
+  text-shadow: 0px 1px 0px #12239e;
   margin-top: 30px;
 }
 .btn-download:hover {
