--- a/style.css
+++ b/style.css
@@ -13,47 +13,16 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  padding: 10px;
   font-family: "Poppins", sans-serif;
   background: linear-gradient(115deg, #5de9fd 10%, #003ecc 90%);
 }
-apa {
-  height: 100%;
+
+.img-fluid {
+  margin-top: 5%;
+  box-shadow: 0px 0px 25px 15px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
 }
 
-.capa {
-  display: table;
-  width: 100%;
-}
-
-.capa {
-  display: table;
-  width: 100%;
-}
-
-.ballonTex {
-  position: fixed;
-  bottom: 5%;
-  right: 5%;
-  width: 75px;
-  height: 75px;
-  border: 2px solid white;
-  border-radius: 10%;
-}
-
-.texto-capa {
-  text-align: center;
-  color: white;
-  display: table-cell;
-  vertical-align: middle;
-}
-
-.texto-capa h1 {
-  font-size: 100px;
-  font-weight: 900;
-  margin-bottom: 50px;
-  font-family: "Montserrat", sans-serif;
-}
 .btn-download {
   background-color: #89d340;
   border-radius: 28px;
@@ -77,7 +46,7 @@ apa {
   background: #fff;
   width: 900px;
   padding: 25px 40px 10px 40px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
 .row {
@@ -114,15 +83,11 @@ apa {
 .fixed-icons img:hover {
   transform: scale(1.1);
 }
-section {
-  height: 100;
-}
 
 section#colaborador label {
   color: #07074d;
   font-size: 14px;
   line-height: 24px;
-  padding-left: 20px;
 }
 
 section#colaborador form {
